# distributed_shared_memory

./: CMakeLists.txt  makefile
application_1/: CMakeLists.txt  main.c  makefile
application_2/: CMakeLists.txt  main.c  makefile
application_3/: CMakeLists.txt  main.c  makefile
cmake/modules/: FindGLIB.cmake
dsm/: CMakeLists.txt  ClientEntry.c  ClientEntry.h  FileReader.c  FileReader.h  Logger.c  Logger.h  NetworkUtils.c  NetworkUtils.h  Server.c  Server.h  ServerForward.c  ServerForward.h  ServerHandle.c  ServerHandle.c~  ServerHandle.h  ServerPageEntry.c  ServerPageEntry.h  main.c  main.c~  makefile
dsm_common/: NetworkInfo.h  Requests.h  Responses.h
dsm_library/: CMakeLists.txt  Client.c  Client.h  ClientHandle.c  ClientHandle.h  ClientPageEntry.h  ClientRequest.c  ClientRequest.h  DSMClient.c  DSMClient.c~  DSMClient.h  Globals.c  Globals.h  makefile
